# nss-http

./: .clang-format  Dockerfile  README.md  docker-compose.yml  getent.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json
data/: group  passwd
src/: CMakeLists.txt  nss_http-group.c  nss_http-passwd.c  nss_http-shadow.c  nss_http.c  nss_http.h
